[tool.poetry]
name = "clerkbot"
version = "0.1.0"
description = ""
authors = ["Do-hyun Ko <dohyun682@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
slack-sdk = "^3.33.3"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
